fix(demo): storybook containers now stretch correctly when the graph changes height

--- a/packages/demo/src/GitLog.stories.module.scss
+++ b/packages/demo/src/GitLog.stories.module.scss
@@ -1,6 +1,7 @@
 .container {
   padding: 20px;
   box-sizing: border-box;
+  height: 100%;
 }
 
 .loading {
